--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <!-- Song -->
-<audio autoplay loop type="audio/mp3" src="audio/tiktokio.com_OEPsRb1NHiLyQwdPyIA9.mp3"></audio>
+<audio controls autoplay loop type="audio/mp3" src="audio/tiktokio.com_OEPsRb1NHiLyQwdPyIA9.mp3"></audio>
 
 <!-- Not Found -->
 <div class="page">
@@ -24,9 +24,10 @@
     <div class="spin-container">
     <h1 class="spin-text">404</h1>
     </div>
+    <a href="sakit.html">
     <p>| Page Not Found |</p>
-    <p>| Website Sedang Dalam Perbaikan |</p>    
-    <button class="btn"><a class="text" href="but.html">?</a></button>
+    <p>| Website Sedang Dalam Perbaikan |</p>
+    </a>
   </div>
 </div>
 <!-- END -->
